[package]
edition = "2018"
license = "Apache-2.0"
name = "russh-napi"
repository = "https://github.com/warp-tech/russh"
version = "0.1.0"
rust-version = "1.75"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
napi = { version = "=3.0.0-alpha.24", features = ["async"] }
napi-derive = "=3.0.0-alpha.24"
tokio = { version = "1.17.0", features = ["macros", "process"] }
russh = { version = "0.54.2", default-features = false, features = [
    "ring",
    "rsa",
    "flate2",
] }
# russh = { version = "0.50.0-beta.12", path = "../russh/russh" }
pageant = { version = "0.0.2" }
futures = "0.3"
thiserror = "2.0"
delegate = "0.13"
russh-sftp = "2.0.2"
env_logger = "0.11"
tokio-socks = "0.5.2"
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio"] }

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
